--- a/moradores/templates/morador.html
+++ b/moradores/templates/morador.html
@@ -3,22 +3,23 @@
 		<div class="row">
 			<div class="col-md">
 				<div class="card card-body">
-					<h5>Pessoas</h5>
+					<h5>Morador</h5>
 				</div>
 				<div class="card card-body">
 					<table class="table">
 						<tr>
-							<th>Pessoas</th>
+							<th>Nome</th>
 							<th>Apto</th>
 							<th>Bloco</th>
-
-							{% for i in pessoas %}
+							<th>Telefone</th>
+							<th>CPF</th>
 								<tr>
-									<td>{{i.nome}}</td>
-									<td>{{i.apto}}</td>
-									<td>{{i.apto.bloco}}</td>
+									<td>{{morador.nome}}</td>
+									<td>{{morador.apto}}</td>
+									<td>{{morador.apto.bloco}}</td>
+									<td>{{morador.telefone}}</td>
+									<td>{{morador.cpf}}</td>
 								</tr>
-							{% endfor %}
 						</tr>
 						
 					</table>
